--- a/app/views/posts/_index.html.erb
+++ b/app/views/posts/_index.html.erb
@@ -6,10 +6,14 @@
           <h3>POST</h3>
         </div>
 
+        <div class="row">
+          <div class="col-xs-3">
             <div class="post-list">
               <%= attachment_image_tag post.user, :profile_image, :fill, 150, 100, format: 'jpg', fallback: "no_image.jpg" %>
             </div>
-          
+          </div>
+            
+          <div class="col-xs-9">
             <div class="post-list">
               投稿者：
               <i class="fas fa-user"></i>
@@ -34,10 +38,12 @@
                 <%= category.name %>
               <% end %>
             </div>
-          
-            <div class="post-text">
+            </div>
+          </div>
+       
+          <div class="post-text">
             <!--4.gsub()で正規表現に合致する箇所を空欄にする-->
-              <%= simple_format(post.body.gsub!(/[#＃][\w\p{Han}ぁ-ヶｦ-ﾟー]+/, "")) %>
+            <%= simple_format(post.body.gsub!(/[#＃][\w\p{Han}ぁ-ヶｦ-ﾟー]+/, "")) %>
             <!--4.postにタグがあればタグを出力する-->
             <% if post.hashtags.any? %>
               <% post.hashtags.each do |hashtag| %>
@@ -48,36 +54,37 @@
                 </span>
               <% end %>
             <% end %>
-            </div>
+          </div>
           
-            <div class="post-image">
-		          <% if post.post_images.present? %>
-                <% post.post_images.each do |image| %>
-                  <%= attachment_image_tag image, :image, :fill, 348, 300 %>
-                <% end %>
+          <div class="post-image">
+		        <% if post.post_images.present? %>
+              <% post.post_images.each do |image| %>
+                <%= attachment_image_tag image, :image, :fill, 348, 300 %>
               <% end %>
-            </div>
+            <% end %>
+          </div>
         
-            <span class="favorite-count">
-              <span class="post_<%= post.id %>">
-                <%= render 'favorites/favorite', post: post %>
-              </span>
-	          </span>
+          <span class="favorite-count">
+            <span class="post_<%= post.id %>">
+              <%= render 'favorites/favorite', post: post %>
+            </span>
+	        </span>
            
-            <span class="comment-count">
-              <%= link_to post_path(post.id) do %>
-                <i class="fa fa-comment"></i>
-                <%= post.post_comments.count %>
-              <% end %>
-            </span>
+          <span class="comment-count">
+            <%= link_to post_path(post.id) do %>
+              <i class="fa fa-comment"></i>
+              <%= post.post_comments.count %>
+            <% end %>
+          </span>
 
-            <span class="date">
-              <i class="far fa-calendar-alt"></i>
-              <%= l post.created_at %>
-            </span>
-          
+          <span class="date">
+            <i class="far fa-calendar-alt"></i>
+            <%= l post.created_at %>
+          </span>
+        
       </div>
     </div>
   <% end %>
+
   <%= paginate @posts %>
 
