--- a/app/views/posts/category.html.erb
+++ b/app/views/posts/category.html.erb
@@ -17,6 +17,8 @@
     </div>
   </div>
 
-  <%= render 'posts/index' , posts: @posts %>
-
+  <div class="col-xs-8">
+    <%= render 'posts/index' , posts: @posts %>
+  </div>
+  
 </div>
