--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,75 +1,80 @@
 <div class="container">
   <div class="row">
-  <div class="col-xs-4">
-    <div class="box1">
-      <div class="profile">
-        <div class="profile-head">
-          <h3>PROFILE</h3>
-        </div>
-      <table style="border:none;">
-        <tr>
-          <td><%= attachment_image_tag @post.user, :profile_image, :fill, 320, 250, format: 'jpg', fallback: "no_image.jpg" %></td>
-        </tr>
-        <tr>
-          <td>
-            <div class="profile-name">
-              <h4>Name</h4>
-            <%= link_to user_path(@post.user) do %>
-              <i class="fas fa-user"></i>
-              <%= @post.user.name %>
-              <% end %>
-            </div>
-          </td>
-        </tr>
-          <td>
-            <div class="profile-introduction">
-              <h4>Introduction</h4>
-              <%= @post.user.introduction %>
-            </div>
-          </td>
-        <tr>
-          <td>
-            <div class="follow-list">
-              <%= link_to follower_path(@post.user) do %>
-                <%= @post.user.follower.count %> フォロー
-              <% end %>
-              |
-              <%= link_to followed_path(@post.user) do %>
-                <%= @post.user.followed.count %> フォロワー
-              <% end %>
-            </div>
-          </td>
-        </tr>
-      </table>
+    <div class="col-xs-4">
+      <div class="box1">
+        <div class="profile">
+          <div class="profile-head">
+            <h3>PROFILE</h3>
+          </div>
+          <table style="border:none;">
+            <tr>
+              <td><%= attachment_image_tag @post.user, :profile_image, :fill, 320, 250, format: 'jpg', fallback: "no_image.jpg" %></td>
+            </tr>
+            <tr>
+              <td>
+                <div class="profile-name">
+                  <h4>Name</h4>
+                <%= link_to user_path(@post.user) do %>
+                  <i class="fas fa-user"></i>
+                    <%= @post.user.name %>
+                  <% end %>
+                </div>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <div class="profile-introduction">
+                  <h4>Introduction</h4>
+                  <%= @post.user.introduction %>
+                </div>
+              </td>
+            <tr>
+            <tr>
+              <td>
+                <span class="follow">
+                  <%= link_to follower_path(@post.user) do %>
+                    <%= @post.user.follower.count %> フォロー
+                  <% end %>
+                </span>
+                <span class="follower">
+                  <%= link_to followed_path(@post.user) do %>
+                    <%= @post.user.followed.count %> フォロワー
+                  <% end %>
+                </span>
+              </td>
+            </tr>
+          </table>
 
-      <% if @post.user == current_user %>
-        <%= link_to "編集", edit_user_path(@post.user) %>
-      <% else %>
-        <% unless @post.user == current_user %>
-          <% if current_user.following(@post.user) %>
-            <%= link_to 'フォロー外す', unfollow_path(@post.user), method: :post, class: "btn btn-primary" %>
+          <% if @post.user == current_user %>
+            <%= link_to "編集", edit_user_path(@post.user) %>
           <% else %>
-            <%= link_to 'フォローする', follow_path(@post.user), method: :post, class: "btn btn-primary" %>
-          <% end %>
-        <% end %>
-      <% end %>
-
-      <% unless @post.user.id == current_user.id %>
-        <% if @isRoom == true %>
-          <span class="user-show-room"><a href="/rooms/<%= @roomId %>" class="btn btn-info">チャットへ</a></span>
-        <% else %>
-          <%= form_for @room do |f| %>
-            <%= fields_for @entry do |e| %>
-              <%= e.hidden_field :user, value: @user %>
+            <% unless @post.user == current_user %>
+              <% if current_user.following(@post.user) %>
+                <%= link_to 'フォロー外す', unfollow_path(@post.user), method: :post, class: "btn btn-primary" %>
+              <% else %>
+                <%= link_to 'フォローする', follow_path(@post.user), method: :post, class: "btn btn-primary" %>
+              <% end %>
             <% end %>
-            <%= f.submit "チャットを始める", class:"btn btn-info user-show-chat"%>
           <% end %>
-        <% end %>      
-      <% end %>
+
+          <span class="chat-room">
+            <% unless @post.user.id == current_user.id %>
+              <% if @isRoom == true %>
+                <span class="user-show-room"><a href="/rooms/<%= @roomId %>" class="btn btn-info">チャットへ</a></span>
+              <% else %>
+                <%= form_for @room do |f| %>
+                  <%= fields_for @entry do |e| %>
+                    <%= e.hidden_field :user, value: @user %>
+                  <% end %>
+                <%= f.submit "チャットを始める", class:"btn btn-info user-show-chat"%>
+                <% end %>
+              <% end %>      
+            <% end %>
+          </span>
       
+        </div>
       </div>
     </div>
-  </div>
 
   <div class="col-xs-8">
     <div class="box1">
@@ -77,47 +82,39 @@
         <div class="post-head">
           <h3>POST</h3>
         </div>
-      <table style="border:none;">
-        <tr>
-          <td>
+          <div class="row">
+            <div class="col-xs-3">
             <div class="post-list">
-              <%= attachment_image_tag @post.user, :profile_image, :fill, 100,100, format: 'jpg', fallback: "no_image.jpg" %>
+              <%= attachment_image_tag @post.user, :profile_image, :fill, 150,100, format: 'jpg', fallback: "no_image.jpg" %>
             </div>  
-          </td>
-        </tr>
-        <tr>
-          <td>
+            </div>
+
+            <div class="col-xs-9">
             <div class="post-list">
+              投稿者：
               <i class="fas fa-user"></i>
               <%= @post.user.name %>
             </div>
-          </td>
-        </tr>
-        <tr>
-          <td>
+          
             <div class="post-list">
+              タイトル：
               <%= @post.title %>
             </div>
-          </td>
-        </tr>
-        <tr>
-          <td>
+          
             <div class="post-list">
+              場所：
               <%= @post.prefecture %>
             </div>
-          </td>
-        </tr>
-        <tr>
-          <td>
+          
             <div class="post-list">
+              カテゴリー：
               <% @post.categories.each do |category| %>
                 <%= category.name %>
               <% end %>
             </div>
-          </td>
-        </tr>
-        <tr>
-          <td>
+            </div>
+          </div>
+            
             <div class="post-text">
               <%= simple_format(@post.body.gsub!(/[#＃][\w\p{Han}ぁ-ヶｦ-ﾟー]+/, "")) %>
               <% if @post.hashtags.any? %>
@@ -130,21 +127,15 @@
                 <% end %>
               <% end %>
             </div>
-          </td>
-        </tr>
-        <tr>
-          <td>
+          
 		        <div class="post-image">
 		          <% if @post.post_images.present? %>
                 <% @post.post_images.each do |image| %>
-                  <%= attachment_image_tag image, :image, :fill, 348, 300 %>
+                  <%= attachment_image_tag image, :image, :fill, 357, 300 %>
                 <% end %>
               <% end %>
             </div>
-	        </td>
-        </tr>
-        <tr>
-          <td>
+	        
             <span class="favorite-count">
               <span class="post_<%= @post.id %>">
                 <%= render 'favorites/favorite', post: @post %>
@@ -169,32 +160,12 @@
               <i class="far fa-calendar-alt"></i>
               <%= l @post.created_at %>
             </span>
-          </td>
-        </tr>
-        <tr>
-          <td>
-            <% @post.post_comments.each do |post_comment| %>
-              <div class="comment-image">
-              <%= attachment_image_tag post_comment.user, :profile_image, :fill, 100, 100, format: 'jpg', fallback: "no_image.jpg" %>
-              </div>
-              <div class="comment-user">
-                <%= link_to user_path(post_comment.user) do %>
-                  <%= post_comment.user.name %>
-                <% end %>
-              </div>
-              <div class="post-text">
-                <%= post_comment.comment %><br>
-              </div>
-              <%= l post_comment.created_at %>
-              <% if post_comment.user == current_user %>
-                <%= link_to "削除", post_post_comment_path(post_comment.post, post_comment), method: :delete, data: {confirm: "本当に消しますか？"}, class: "btn btn-danger pull-right" %>
-              <% end %>
-            <% end %>
-          </td>
-        </tr>
-      </table>
+          
+            <span class="comment_<%= @post.id %>">
+              <%= render 'post_comments/comments', post: @post %>
+            </span>
 
-      <div class="text-right">
+      <div class="text-right" style="margin-top: 30px;">
         <% if @post.user_id == current_user.id %>
           <%= link_to "編集", edit_post_path(@post.id) %>
           |
@@ -208,11 +179,7 @@
     </div>
   
   <!--コメント入力欄-->
-    <%= form_with model: [@post, @post_comment] do |f| %>
-      <%= f.text_area :comment, rows:'5', class: "form-control",placeholder: "コメントをここに" %>
-      <%= f.submit "送信", class: "btn btn-lg btn-base-1 mt-20 pull-right" %>
-    <% end %>
-
+    <%= render 'post_comments/form', post_comment: @post_comment, post: @post %>
   </div>
 </div>
 </div>
