--- a/app/views/search/search.html.erb
+++ b/app/views/search/search.html.erb
@@ -1,5 +1,6 @@
 <div class="container"> 
   <div class="row">
+    <div class="col-xs-12">
 
   <% if @model == 'user' %>
     <h3 class="text-center">Users search for '<%= @content %>' </h3>
@@ -8,6 +9,6 @@
     <h3 class="text-center">Posts search for '<%= @content %>' </h3>
     <%= render 'posts/index' , posts: @records %>
   <% end %> 
-
+</div>
   </div>
 </div>
