--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -21,7 +21,7 @@
         <p>観光客と地元民をつなぐ交流系の地域ローカル情報サイトです。</p>
         <p>地元民だからこそ知っている、あのお店の美味しいグルメ情報やおすすめスポットをアピール！！</p>
         <p>旅行先での行って良かったスポット。是非おすすめしたいグルメ情報などを共有しましょう！</p>
-        <p>旅行前に現地の情報が欲しい？お土産は何がいい？服装は？質問してみましょう。誰かが反応してくれるかも？</p>
+        <p>旅行前に現地の情報が欲しい？お土産は何がいい？服装はどうしよう？質問してみましょう。誰かが反応してくれるかも？</p>
       </div>
       <div class="about-link">
         <%= link_to home_about_path do %>
