--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -40,9 +40,10 @@
         <% end %>    
       </li>
       <li class="nav-list-item">
-        <div class="new-post-form">
+        <div class="new-post-form cp_tooltip">
           <%= link_to new_post_path do %>
             <i class="fas fa-plus-circle fa-3x"></i>
+            <span class="cp_tooltiptext">投稿する</span>
           <% end %>
         </div>
       </li>
