--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -30,7 +30,7 @@ a {
 }
 a:hover {/*マウスが上に乗っている状態*/
   color:#33CC00;
-  text-decoration:underline;
+  text-decoration: none;
 }
 
 /*ヘッター*/
@@ -112,6 +112,42 @@ body {
   margin: 0; 
   padding: 0;
 }
+
+.cp_tooltip {
+	position: relative;
+	display: inline-block;
+	cursor: pointer;
+}
+.cp_tooltip .cp_tooltiptext {
+	position: absolute;
+	z-index: 1;
+	top: -5px;
+	left: 105%;
+	visibility: hidden;
+	/*width: auto;*/
+	white-space: nowrap;
+	padding: 0.3em 0.5em;
+	transition: opacity 1s;
+	text-align: center;
+	opacity: 0;
+	color: #ffffff;
+	border-radius: 6px;
+	background-color: #003366;
+}
+.cp_tooltip .cp_tooltiptext::after {
+	position: absolute;
+	top: 40%;
+	right: 100%;
+	margin-left: -5px;
+	content: ' ';
+	border: 5px solid transparent;
+	border-right-color: #003366;
+}
+.cp_tooltip:hover .cp_tooltiptext {
+	visibility: visible;
+	opacity: 1;
+}
+
 
 
 /*プロフィール*/
@@ -325,14 +361,14 @@ main {
   border: 2px solid #CD853F;
 }
 .image-box:nth-child(1) {
-  background-image: image-url("hujisan.jpg");
+  background-image: image-url("taki.jpg");
   margin-right: 10px;
   margin-bottom: 10px;
   display: inline-block;
   box-shadow: 0px 0px 20px -5px rgba(0, 0, 0, 0.8);
 }
 .image-box:nth-child(2) {
-  background-image: image-url("jinja.jpg");
+  background-image: image-url("kyoto.jpg");
   margin-right: 10px;
   margin-bottom: 10px;
   display: inline-block;
@@ -373,7 +409,7 @@ main {
   text-align: center;
 }
 .about-image1 {
-  background-image: image-url("sushi.jpg");
+  background-image: image-url("niku.jpg");
   background-size: cover;
   background-position: center;
   height: 250px;
@@ -383,7 +419,7 @@ main {
   border: 2px solid #CD853F;
 }
 .about-image2 {
-  background-image: image-url("jinja.jpg");
+  background-image: image-url("siro.jpg");
   background-size: cover;
   background-position: center;
   height: 250px;
@@ -393,7 +429,7 @@ main {
   border: 2px solid #CD853F;
 }
 .about-image3 {
-  background-image: image-url("tetujin.jpg");
+  background-image: image-url("hujisan.jpg");
   background-size: cover;
   background-position: center;
   height: 250px;
@@ -403,7 +439,7 @@ main {
   border: 2px solid #CD853F;
 }
 .about-image4 {
-  background-image: image-url("hujisan.jpg");
+  background-image: image-url("jinja.jpg");
   background-size: cover;
   background-position: center;
   height: 250px;
