--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-xs-3"></div>
-    <h2 class="well well-sm col-xs-6 text-center">新規会員登録 <i class="fas fa-user-plus"></i></h2>
+    <h2 class="well well-sm col-xs-6 text-center">新規会員登録 <i class="fas fa-user-plus fa-lg"></i></h2>
   </div>
 
   <div class="row">
