--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
   </head>
 
   <body>
-
+    <div class="wrapper">
     <%= render partial: 'layouts/header' %>
     
       <div class="flash-content">
@@ -34,5 +34,6 @@
     <script src="javascripts/jquery.min.js"></script>
     <script src="javascripts/skippr.min.js"></script>
     <script src="javascripts/application.js"></script>
+    </div>
   </body>
 </html>
