--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -1,11 +1,11 @@
 <div class="main-visual">
   <!--画像スライド-->
   <div class="theTarget">
-    <div style="background-image: url(cafe.jpg)"></div>
-    <div style="background-image: url(tetujin.jpg)"></div>
-    <div style="background-image: url(haisenato.jpg)"></div>
-    <div style="background-image: url(sushi.jpg)"></div>
-    <div style="background-image: url(hujisan.jpg)"></div>
+    <div style="background-image: url(/assets/miyakojima.jpg)"></div>
+    <div style="background-image: url(/assets/tetujin.jpg)"></div>
+    <div style="background-image: url(/assets/haisenato.jpg)"></div>
+    <div style="background-image: url(/assets/sirakawagou.jpg)"></div>
+    <div style="background-image: url(/assets/hujisan.jpg)"></div>
   </div>
 </div>
 
@@ -43,3 +43,29 @@
   </div>
 
 </main>
+
+
+<script>
+$(".theTarget").skippr({
+  // スライドショーの変化（"fade" or "slide"）
+  transition : 'fade',
+  // 変化にかかる時間（ミリ秒）
+  speed : 1000,
+  // easingの種類
+  easing : 'easeOutQuart',
+  // ナビゲーションの形（"block" or "bubble"）
+  navType : 'block',
+  // 子要素の種類（"div" or "img"）
+  childrenElementType : 'div',
+  // ナビゲーション矢印の表示（trueで表示）
+  arrows : false,
+  // スライドショーの自動再生（falseで自動再生なし）
+  autoPlay : true,
+  // 自動再生時のスライド切替間隔（ミリ秒）
+  autoPlayDuration : 5000,
+  // キーボードの矢印キーによるスライド送りの設定（trueで有効）
+  keyboardOnAlways : true,
+  // 1枚目のスライド表示時に戻る矢印を表示するかどうか [false]:矢印を隠さない [true]:矢印を隠す
+  hidePrevious : false
+});
+</script>
