--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -33,6 +33,12 @@
             <% end %>
           </ul>
         </div>
+
+
+        <!--<script src="//code.jquery.com/jquery-1.12.0.min.js"></script>
+        <%#= javascript_include_tag 'jquery.japan-map.min.js' %>
+        <div id="map-container"></div>-->
+
       </div>
 
       <div class="col-xs-8">
