[Fix]relationships_layout

--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -1,11 +1,11 @@
 <div class="main-visual">
   <!--画像スライド-->
   <div class="theTarget">
-    <div style="background-image: url(/assets/miyakojima.jpg)"></div>
-    <div style="background-image: url(/assets/tetujin.jpg)"></div>
-    <div style="background-image: url(/assets/haisenato.jpg)"></div>
+    <div style="background-image: url(/assets/metasekoia.jpg)"></div>
+    <div style="background-image: url(/assets/enosima.jpg)"></div>
+    <div style="background-image: url(/assets/kouyou.jpg)"></div>
+    <div style="background-image: url(/assets/ajisai.jpg)"></div>
     <div style="background-image: url(/assets/sirakawagou.jpg)"></div>
-    <div style="background-image: url(/assets/hujisan.jpg)"></div>
   </div>
 </div>
 
@@ -62,7 +62,7 @@ $(".theTarget").skippr({
   // スライドショーの自動再生（falseで自動再生なし）
   autoPlay : true,
   // 自動再生時のスライド切替間隔（ミリ秒）
-  autoPlayDuration : 5000,
+  autoPlayDuration : 3000,
   // キーボードの矢印キーによるスライド送りの設定（trueで有効）
   keyboardOnAlways : true,
   // 1枚目のスライド表示時に戻る矢印を表示するかどうか [false]:矢印を隠さない [true]:矢印を隠す
