--- a/app/views/relationships/followed.html.erb
+++ b/app/views/relationships/followed.html.erb
@@ -4,73 +4,129 @@
   <div class="row"> 
     <div class="col-xs-4">
       <div class="box1">
+        <div class="profile">
+          <div class="profile-head">
+            <h3>PROFILE</h3>
+          </div>
         <table style="border:none;">
-          <tr>
-            <td><%= attachment_image_tag @user, :profile_image, :fill, 320, 250, format: 'jpg', fallback: "no_image.jpg" %></td>
-          </tr>
-          <tr>
-            <td><%= @user.introduction %></td>
-          </tr>
-          <tr>
-            <td>
+        <tr>
+          <td><%= attachment_image_tag @user, :profile_image, :fill, 320, 250, format: 'jpg', fallback: "no_image.jpg" %></td>
+        </tr>
+        <tr>
+          <td>
+            <div class="profile-name">
+              <h4>Name</h4>
               <i class="fas fa-user">
                 <%= @user.name %>
               </i>
-            </td>
-          </tr>
-          <tr>
-            <td>
+            </div>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <div class="profile-introduction">
+              <h4>Introduction</h4>
+              <%= @user.introduction %>
+            </div>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <span class="follow">
               <%= link_to follower_path(@user) do %>
                 <%= @user.follower.count %> フォロー
               <% end %>
+            </div>
+            <span class="follower">
               <%= link_to followed_path(@user) do %>
                 <%= @user.followed.count %> フォロワー
               <% end %>
-            </td>
-          </tr>
+            </span>
+          </td>
+        </tr>
         </table>
 
-        <% if @user == current_user %>
-          <%= link_to "編集", edit_user_path(@user) %>
-        <% else %>
-          <% unless @user == current_user %>
-            <% if current_user.following(@user) %>
-              <%= link_to 'フォロー外す', unfollow_path(@user), method: :post %>
-            <% else %>
-              <%= link_to 'フォローする', follow_path(@user), method: :post %>
-            <% end %>
+      <% if @user == current_user %>
+        <%= link_to "編集", edit_user_path(@user) %>
+      <% else %>
+        <% unless @user == current_user %>
+          <% if current_user.following(@user) %>
+            <%= link_to 'フォロー外す', unfollow_path(@user), method: :post, class: "btn btn-primary" %>
+          <% else %>
+            <%= link_to 'フォローする', follow_path(@user), method: :post, class: "btn btn-primary" %>
           <% end %>
         <% end %>
-      </div>
+      <% end %>
+
+      <span class="chat-room">
+      <% unless @user.id == current_user.id %>
+        <% if @isRoom == true %>
+          <span class="user-show-room"><a href="/rooms/<%= @roomId %>" class="btn btn-info">チャットへ</a></span>
+        <% else %>
+          <%= form_for @room do |f| %>
+            <%= fields_for @entry do |e| %>
+              <%= e.hidden_field :user_id, value: @user.id %>
+            <% end %>
+            <%= f.submit "チャットを始める", class:"btn btn-info user-show-chat"%>
+          <% end %>
+        <% end %>      
+      <% end %>
+      </span>
+
     </div>
+  </div>
+</div>
 
       <div class="col-xs-8">
     <% if @users.count > 0 %>
       <% @users.each do |user| %>
-
-        <div class="box1">
-          <table style="border:none;">
-            <tr>
-              <td><%= attachment_image_tag user, :profile_image, :fill, 100, 100, format: 'jpg', fallback: "no_image.jpg" %></td>
-            </tr>
-            <tr>
-              <td>
-                <%= link_to user_path(user) do %>
-                  <%= user.name %>
-                <% end %>
-              </td>
-            </tr>
-            <tr>
-              <td><%= user.introduction %></td>
-            </tr>
-            <tr>
-              <td><%= user.follower.count %>フォロー</td>
-              <td><%= user.followed.count %>フォロワー</td>
-            </tr>
-          </table>
+    
+      <div class="box1">
+        <div class="profile-head">
+          <h3>PROFILE</h3>
         </div>
+        
+        <div class="row">
+          
+          <div class="profile-box">
 
-    <% end %>
+            <div class="col-xs-4">
+              <div class="box-user">
+                <%= attachment_image_tag user, :profile_image, :fill, 200, 150, format: 'jpg', fallback: "no_image.jpg" %>
+              </div>
+            </div>
+        
+            <div class="col-xs-8">
+              <div class="row">
+                <div class="profile-name">
+                  <%= link_to user_path(user) do %>
+                    <i class="fas fa-user"></i>
+                    <%= user.name %>
+                  <% end %>
+                </div>
+              </div>
+              
+              <div class="row">
+                <div class="profile-introduction">
+                  <%= user.introduction %>
+                </div>
+              </div>
+
+              <div class="row">
+                <span class="follow">
+                  <%= user.follower.count %>フォロー
+                </span>
+                <span class="follower">
+                  <%= user.followed.count %>フォロワー
+                </span>
+              </div>
+
+            </div>
+          </div>
+        </div>
+      </div>
+    
+  <% end %>
 
   <% else %>
     <p>ユーザーはいません</p>
