--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -167,9 +167,9 @@
 
       <div class="text-right" style="margin-top: 30px;">
         <% if @post.user_id == current_user.id %>
-          <%= link_to "編集", edit_post_path(@post.id) %>
+          <%= link_to "編集", edit_post_path(@post) %>
           |
-          <%= link_to "削除", post_path(@post.id), method: :delete, data: {confirm: "本当に消しますか？"} %>
+          <%= link_to "削除", post_path(@post), method: :delete, data: {confirm: "本当に消しますか？"} %>
         <% end %>
       </div>
       <div class="text-left">
