--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -34,7 +34,7 @@
 
     <div class="col-xs-12 about-text-box">
       <div class="col-xs-8">
-        <h2>STEP3 </h2>
+        <h2>STEP3 交流してみよう</h2>
         <p></p>
         <div class="about3">
           <p class="about-text">gggg</p>
