--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -41,6 +41,11 @@
                     <%= @post.user.followed.count %> フォロワー
                   <% end %>
                 </span>
+                <span class="user_favorites">
+                  <% if @post.user.id == current_user.id %>
+                    <%= link_to "いいね一覧", favorites_path(@post.user) %>
+                  <% end %>
+                </span>
               </td>
             </tr>
           </table>
@@ -60,7 +65,11 @@
           <span class="chat-room">
             <% unless @post.user.id == current_user.id %>
               <% if @isRoom == true %>
-                <span class="user-show-room"><a href="/rooms/<%= @roomId %>" class="btn btn-info">チャットへ</a></span>
+                <span class="user-show-room">
+                  <a href="/rooms/<%= @roomId %>" class="btn btn-info">
+                    <i class="fas fa-envelope fa-lg"></i>
+                  </a>
+                </span>
               <% else %>
                 <%= form_for @room do |f| %>
                   <%= fields_for @entry do |e| %>
