--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -36,9 +36,8 @@
       </li>
       <li class="nav-list-item">
         <%= form_tag(search_path, method: :get) do %>
-          <%= text_field_tag 'search[content]', "", placeholder: "search" %>
+          <%= text_field_tag 'search[content]', "", placeholder: "キーワード検索" %>
           <%= select_tag 'search[model]', options_for_select({"ユーザー" => "user", "投稿内容" => "post"}) %>
-          <%= select_tag 'search[method]', options_for_select({"完全一致" => "perfect", "部分一致" => "partial" }) %>
           <%= submit_tag '検索' %>
         <% end %>    
       </li>
