--- a/app/views/notifications/_notification.html.erb
+++ b/app/views/notifications/_notification.html.erb
@@ -3,7 +3,7 @@
 
 <div class="notification-box">
 <%= link_to user_path(visitor) do %>
-  <%= attachment_image_tag visitor, :profile_image, :fill, 100, 100, format: 'jpg', fallback: "no_image.jpg", class: "icon_mini" %>
+  <%= attachment_image_tag visitor, :profile_image, :fill, 70, 70, format: 'jpg', fallback: "no_image.jpg", class: "icon_mini" %>
   <%= visitor.name %>
 <% end %>
 'さんが'
@@ -11,14 +11,14 @@
   <% case notification.action %>
   <% when 'favorite' then %>
     <%= link_to 'あなたの投稿', notification.post, style: "font-weight: bold;" %>
-    にいいねしました"
+    "にいいねしました"
   <% when 'post_comment' then %>
     <% if notification.post.user_id == visited.id %>
       <%= link_to "あなたの投稿に", notification.post, style: "font-weight: bold;" %>
       コメントしました
     <% else %>
       <%= link_to post_path(notification.post) do %>
-        <%= image_tag avatar_url(notification.post.user).to_s, class: "icon_mini" %>
+        <%= attachment_image_tag notification.post.user, :profile_image, :fill, 70, 70, format: "jpg", fallback: "no_image.jpg", class: "icon_mini" %>
         <strong><%= notification.post.user.name + 'さんの投稿' %>にコメントしました</strong>
       <% end %>
     <% end %>
