--- a/app/views/posts/prefecture.html.erb
+++ b/app/views/posts/prefecture.html.erb
@@ -1,6 +1,7 @@
-
-  <% posts.each do |post| %>
-    <div class="box1">
+<div class="container">
+  <div class="row">
+<% @prefecture_posts.each do |post| %>
+  <div class="box1">
       <div class="post">
         <div class="post-head">
           <h3>POST</h3>
@@ -84,7 +85,7 @@
         
       </div>
     </div>
-  <% end %>
+<% end %>
 
-  
-
+  </div>
+</div>
