[Fix]JapanMap_layout

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -34,9 +34,15 @@
           </ul>
         </div>
 
-
-        <%= link_to '都道府県検索', map_path %>
-        
+        <div class="box2">
+          <div class="box-title">
+            Prefecture
+          </div>
+          <div class="prefecture-link">
+            <%= link_to '日本地図検索', map_path %>
+            <div class="image-japanmap"></div>
+          </div>
+        </div>
 
       </div>
 
@@ -49,6 +55,7 @@
     </div>
   </div>
 </div>
+
 	
   
 
