--- a/app/views/posts/prefecture.html.erb
+++ b/app/views/posts/prefecture.html.erb
@@ -1,91 +1,142 @@
 <div class="container">
   <div class="row">
-<% @prefecture_posts.each do |post| %>
-  <div class="box1">
-      <div class="post">
-        <div class="post-head">
-          <h3>POST</h3>
+
+    <div class="col-xs-12">
+      <div class="col-xs-4">
+      
+        <div class="box2">
+          <div class="box-title">
+            Category
+          </div>
+          <ul class="list-category">
+            <% @categories.each do |category| %>
+              <li>
+                <%= link_to category_path(@posts, name: category.name) do %>
+                  <%= category.name %>
+                <% end %>
+              </li>
+            <% end %>
+          </ul>  
+        </div>
+      
+        <div class="box2">
+          <div class="box-title">
+            Ranking
+          </div>
+          <ul class="list_crown">
+            <% @all_ranks.each.with_index(1) do |rank, i| %>
+              <li>
+                <%= link_to post_path(rank) do %>
+                  第<%= i %>位<br>
+                  <%= rank.title %>
+                <% end %>
+               </li>
+            <% end %>
+          </ul>
         </div>
 
-        <div class="row">
-          <div class="col-xs-3">
-            <div class="post-list">
-              <%= attachment_image_tag post.user, :profile_image, :fill, 150, 100, format: 'jpg', fallback: "no_image.jpg" %>
-            </div>
+        <div class="box2">
+          <div class="box-title">
+            Prefecture
           </div>
-            
-          <div class="col-xs-9">
-            <div class="post-list">
-              投稿者：
-              <i class="fas fa-user"></i>
-              <%= post.user.name %>
-            </div>
-          
-            <div class="post-list">
-              タイトル：
-              <%= link_to post_path(post), data: {"turbolinks" => false} do %>
-              <%= post.title %>
-              <% end %>
-            </div>
-          
-            <div class="post-list">
-              場所：
-              <%= post.prefecture %></td>
-            </div>
-          
-            <div class="post-list">
-              カテゴリー：
-              <% post.categories.each do |category| %>
-                <%= category.name %>
-              <% end %>
-            </div>
-            </div>
+          <div class="prefecture-link">
+            <%= link_to '日本地図検索', map_path %>
+            <div class="image-japanmap"></div>
           </div>
-       
-          <div class="post-text">
-            <!--4.gsub()で正規表現に合致する箇所を空欄にする-->
-            <%= simple_format(post.body.gsub!(/[#＃][\w\p{Han}ぁ-ヶｦ-ﾟー]+/, "")) %>
-            <!--4.postにタグがあればタグを出力する-->
-            <% if post.hashtags.any? %>
-              <% post.hashtags.each do |hashtag| %>
-                <span>
-                  <%= link_to hashtag_path(post,hashname: hashtag.hashname) do %>
-                    #<%= hashtag.hashname %>
-                  <% end %>
-                </span>
-              <% end %>
-            <% end %>
-          </div>
-          
-          <div class="post-image">
-		        <% if post.post_images.present? %>
-              <% post.post_images.each do |image| %>
-                <%= attachment_image_tag image, :image, :fill, 348, 300 %>
-              <% end %>
-            <% end %>
-          </div>
-        
-          <span class="favorite-count">
-            <span class="post_<%= post.id %>">
-              <%= render 'favorites/favorite', post: post %>
-            </span>
-	        </span>
-           
-          <span class="comment-count">
-            <%= link_to post_path(post.id) do %>
-              <i class="fa fa-comment"></i>
-              <%= post.post_comments.count %>
-            <% end %>
-          </span>
+        </div>
 
-          <span class="date">
-            <i class="far fa-calendar-alt"></i>
-            <%= l post.created_at %>
-          </span>
+      </div>
+    
+      <div class="col-xs-8">
+
+        <% @prefecture_posts.each do |post| %>
+          <div class="box1">
+            <div class="post">
+              <div class="post-head">
+                <h3>POST</h3>
+              </div>
+
+              <div class="row">
+                <div class="col-xs-3">
+                  <div class="post-list">
+                    <%= attachment_image_tag post.user, :profile_image, :fill, 150, 100, format: 'jpg', fallback: "no_image.jpg" %>
+                  </div>
+                </div>
+            
+                <div class="col-xs-9">
+                  <div class="post-list">
+                    投稿者：
+                    <i class="fas fa-user"></i>
+                    <%= post.user.name %>
+                  </div>
+          
+                  <div class="post-list">
+                    タイトル：
+                    <%= link_to post_path(post), data: {"turbolinks" => false} do %>
+                      <%= post.title %>
+                    <% end %>
+                  </div>
+          
+                  <div class="post-list">
+                    場所：
+                    <%= post.prefecture %></td>
+                  </div>
+          
+                  <div class="post-list">
+                    カテゴリー：
+                    <% post.categories.each do |category| %>
+                      <%= category.name %>
+                    <% end %>
+                  </div>
+                </div>
+              </div>
+       
+              <div class="post-text">
+                <!--4.gsub()で正規表現に合致する箇所を空欄にする-->
+                <%= simple_format(post.body.gsub!(/[#＃][\w\p{Han}ぁ-ヶｦ-ﾟー]+/, "")) %>
+                <!--4.postにタグがあればタグを出力する-->
+                <% if post.hashtags.any? %>
+                  <% post.hashtags.each do |hashtag| %>
+                    <span>
+                      <%= link_to hashtag_path(post,hashname: hashtag.hashname) do %>
+                        #<%= hashtag.hashname %>
+                      <% end %>
+                    </span>
+                  <% end %>
+                <% end %>
+              </div>
+          
+              <div class="post-image">
+		            <% if post.post_images.present? %>
+                  <% post.post_images.each do |image| %>
+                    <%= attachment_image_tag image, :image, :fill, 348, 300 %>
+                  <% end %>
+                <% end %>
+              </div>
         
+              <span class="favorite-count">
+                <span class="post_<%= post.id %>">
+                  <%= render 'favorites/favorite', post: post %>
+                </span>
+	            </span>
+           
+              <span class="comment-count">
+                <%= link_to post_path(post.id) do %>
+                  <i class="fa fa-comment"></i>
+                  <%= post.post_comments.count %>
+                <% end %>
+              </span>
+
+              <span class="date">
+                <i class="far fa-calendar-alt"></i>
+                <%= l post.created_at %>
+              </span>
+        
+            </div>
+          </div>
+        <% end %>
+
       </div>
     </div>
-<% end %>
-
   </div>
 </div>
