--- a/app/views/users/favorites.html.erb
+++ b/app/views/users/favorites.html.erb
@@ -2,7 +2,7 @@
 <div class="container">
   <div class="row">
 
-    <h2 class="text-center">〜いいね一覧〜</h2>
+    <h2 class="text-center">〜行ってみたい一覧〜</h2>
 
 <% @favorites.each do |favorite| %>
   <% post = Post.find_by(id: favorite.post_id) %>
