--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -7,9 +7,12 @@
         <h2>STEP1 投稿してみよう</h2>
         <p></p>
         <div class="about1">
-          <p class="about-text">aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</p>
-          <p class="about-text">bbbb</p>
-          <p class="about-text">cccc</p>
+          <p class="about-text">皆さんは観光先や休日のお出かけ先に悩んだことはありませんか？</p>
+          <p class="about-text">できれば観光地に住んでいる人のおすすめのグルメ情報を知りたい。</p>
+          <p class="about-text">地元のお出かけ先、もう行くところないな。誰かいいスポット知らないかな。</p>
+          <p class="about-text">お出かけ先のあの場所がよかった。あのお店のランチがとても美味しかったよ。</p>
+          <p class="about-text">そういう時は投稿してみましょう。タイトル、都道府県、カテゴリーを選択して</p>
+          <p class="about-text">思い出やおすすめスポットの共有、お出かけ前の質問等に活用してみましょう。</p>
         </div>
       </div>
       <div class="col-xs-4">
@@ -25,9 +28,10 @@
         <h2>STEP2 探してみよう</h2>
         <p></p>
         <div class="about2">
-          <p class="about-text">dddd</p>
-          <p class="about-text">eeee</p>
-          <p class="about-text">ffff</p>
+          <p class="about-text">皆さんが投稿したお出かけ先の情報には様々な検索方法があります。</p>
+          <p class="about-text">カテゴリー、投稿内容、ハッシュタグ、日本地図からの都道府県検索など。</p>
+          <p class="about-text">お出かけ前に他の人がどういった所をおすすめしているかを調べてみましょう。</p>
+          <p class="about-text">きっとまだあなたの知らないスポットや、行きたい場所が見つかるはずです。</p>
         </div>
       </div>
     </div>
@@ -37,9 +41,10 @@
         <h2>STEP3 交流してみよう</h2>
         <p></p>
         <div class="about3">
-          <p class="about-text">gggg</p>
-          <p class="about-text">hhhh</p>
-          <p class="about-text">iiii</p>
+          <p class="about-text">この投稿の質問は私の地元だ。おすすめのお店やスポットを知っているぞ。</p>
+          <p class="about-text">この人が行った旅行の投稿内容に興味があるな。もっと詳しく知りたいな。</p>
+          <p class="about-text">気になる時ありますよね。コメントやチャットを通じて交流してみましょう。</p>
+          <p class="about-text">もちろん投稿に対する感想でも大丈夫です。どんどん交流しましょう。</p>
         </div>
       </div>
       <div class="col-xs-4">
@@ -52,12 +57,20 @@
         <div class="about-image4"></div>
       </div>
       <div class="col-xs-8">
-        <h2>STEP4 </h2>
+        <h2>STEP4 リストを作ろう</h2>
         <p></p>
         <div class="about4">
-          <p class="about-text">jjjj</p>
-          <p class="about-text">kkkk</p>
-          <p class="about-text">llll</p>
+          <p class="about-text">次の旅行ではこの人の投稿のおすすめスポットに行ってみたいな。</p>
+          <p class="about-text">地元にこんな場所があったんだ。今度の週末に行ってみるか。</p>
+          <p class="about-text">
+            投稿の
+            <i class="fa fa-heart" aria-hidden="true" style="color: red;"></i>
+            マークをクリックすると自分の詳細のリスト一覧に反映されます。
+          </p>
+          <p class="about-text">
+            <i class="fa fa-heart" aria-hidden="true" style="color: red;"></i>
+            マークが多い人気投稿は、ベスト5までのランキングにも載ります。
+          </p>
         </div>
       </div>
     </div>
