[Fix]インデント

--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -8,10 +8,10 @@
         <p></p>
         <div class="about1">
           <p class="about-text">皆さんは観光先や休日のお出かけ先に悩んだことはありませんか？</p>
-          <p class="about-text">できれば観光地に住んでいる人のおすすめのグルメ情報を知りたい。</p>
+          <p class="about-text">観光地に住んでいる地元の人のおすすめのグルメ情報を知りたい。</p>
           <p class="about-text">地元のお出かけ先、もう行くところないな。誰かいいスポット知らないかな。</p>
           <p class="about-text">お出かけ先のあの場所がよかった。あのお店のランチがとても美味しかったよ。</p>
-          <p class="about-text">そういう時は投稿してみましょう。タイトル、都道府県、カテゴリーを選択して</p>
+          <p class="about-text">では<i class="fas fa-plus-circle fa-lg"></i>から投稿してみましょう。タイトル、都道府県、カテゴリーを選択して</p>
           <p class="about-text">思い出やおすすめスポットの共有、お出かけ前の質問等に活用してみましょう。</p>
         </div>
       </div>
@@ -65,7 +65,7 @@
           <p class="about-text">
             投稿の
             <i class="fa fa-heart" aria-hidden="true" style="color: red;"></i>
-            マークをクリックすると自分の詳細のリスト一覧に反映されます。
+            マークをクリックでマイページの行ってみたい一覧に保存されます。
           </p>
           <p class="about-text">
             <i class="fa fa-heart" aria-hidden="true" style="color: red;"></i>
