--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -4,17 +4,18 @@
       <div class="col-xs-4">
 
         <div class="box2">
-          <div class="box-title">Category</div>
-            <ul class="list-category">
-              <% @categories.each do |category| %>
-                <li>
-                  <%= link_to category_path(@post, name: category.name) do %>
-                    <%= category.name %>
-                  <% end %>
-                </li>
-              <% end %>
-            </ul>
-          
+          <div class="box-title">
+            Category
+          </div>
+          <ul class="list-category">
+            <% @categories.each do |category| %>
+              <li>
+                <%= link_to category_path(@post, name: category.name) do %>
+                  <%= category.name %>
+                <% end %>
+              </li>
+            <% end %>
+          </ul>
         </div>
 
         <div class="box2">
