[Add]page_title_layout

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -175,7 +175,7 @@ h4 {
   border-radius: 30px;
 }
 .follower {
-  margin: 0 20px 0 10px;
+  margin: 0 10px 0 10px;
   background-color: #FFFFBB;
   padding: 3px;
   border-radius: 30px;
@@ -470,6 +470,50 @@ main {
 }
 .entrance {
   margin: 50px auto;
+}
+.about-step {
+  position: relative;
+  padding: 1rem 2rem calc(1rem + 10px);
+  background: #fff100;
+}
+.about-step:before {
+  position: absolute;
+  top: -7px;
+  left: -7px;
+  width: 100%;
+  height: 100%;
+  content: '';
+  border: 4px solid #000;
+}
+.about-steps {
+  padding: 0.5em 1em;
+  margin: 2em 0;
+  color: #2c2c2f;
+  background: #FFFFBB;/*背景色*/
+}
+.about-steps p {
+  margin: 0; 
+  padding: 0;
+}
+.page-title {
+  margin: 20px 100px;
+  position: relative;
+  padding: 1.5rem 2rem;
+  color: #fff;
+  border-radius: 10px;
+  background: olivedrab;
+}
+
+.page-title:after {
+  position: absolute;
+  bottom: -9px;
+  left: 1em;
+  width: 0;
+  height: 0;
+  content: '';
+  border-width: 10px 10px 0 10px;
+  border-style: solid;
+  border-color: olivedrab transparent transparent transparent;
 }
 
 /*ページネーション*/
