--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,18 +1,20 @@
-<h2 class="text-center">〜About〜</h2>
+<h2 class="text-center page-title">〜About〜</h2>
 
 <div class="container about-box">
   <div class="row about-description">
     <div class="col-xs-12 about-text-box">
       <div class="col-xs-8">
-        <h2>STEP1 投稿してみよう</h2>
-        <p></p>
-        <div class="about1">
+        <h2 class="about-step">STEP1 投稿してみよう</h2>
+        <div class="about-steps">
           <p class="about-text">皆さんは観光先や休日のお出かけ先に悩んだことはありませんか？</p>
           <p class="about-text">観光地に住んでいる地元の人のおすすめのグルメ情報を知りたい。</p>
           <p class="about-text">地元のお出かけ先、もう行くところないな。誰かいいスポット知らないかな。</p>
-          <p class="about-text">お出かけ先のあの場所がよかった。あのお店のランチがとても美味しかったよ。</p>
-          <p class="about-text">では<i class="fas fa-plus-circle fa-lg"></i>から投稿してみましょう。タイトル、都道府県、カテゴリーを選択して</p>
-          <p class="about-text">思い出やおすすめスポットの共有、お出かけ前の質問等に活用してみましょう。</p>
+          <p class="about-text">お出かけ先のあの場所がよかった。あのお店のランチとても美味しかったよ。</p>
+          <p class="about-text">
+            <i class="fas fa-plus-circle fa-lg"></i>
+            から投稿してみましょう。タイトル、都道府県、カテゴリーを選択して
+          </p>
+          <p class="about-text">思い出やおすすめスポットの共有、お出かけ前の質問に活用してみましょう。</p>
         </div>
       </div>
       <div class="col-xs-4">
@@ -25,12 +27,11 @@
         <div class="about-image2"></div>
       </div>
       <div class="col-xs-8">
-        <h2>STEP2 探してみよう</h2>
-        <p></p>
-        <div class="about2">
+        <h2 class="about-step">STEP2 探してみよう</h2>
+        <div class="about-steps">
           <p class="about-text">皆さんが投稿したお出かけ先の情報には様々な検索方法があります。</p>
           <p class="about-text">カテゴリー、投稿内容、ハッシュタグ、日本地図からの都道府県検索など。</p>
-          <p class="about-text">お出かけ前に他の人がどういった所をおすすめしているかを調べてみましょう。</p>
+          <p class="about-text">お出かけ前に他の人がどんな場所をおすすめしているかを調べてみましょう。</p>
           <p class="about-text">きっとまだあなたの知らないスポットや、行きたい場所が見つかるはずです。</p>
         </div>
       </div>
@@ -38,9 +39,8 @@
 
     <div class="col-xs-12 about-text-box">
       <div class="col-xs-8">
-        <h2>STEP3 交流してみよう</h2>
-        <p></p>
-        <div class="about3">
+        <h2 class="about-step">STEP3 交流してみよう</h2>
+        <div class="about-steps">
           <p class="about-text">この投稿の質問は私の地元だ。おすすめのお店やスポットを知っているぞ。</p>
           <p class="about-text">この人が行った旅行の投稿内容に興味があるな。もっと詳しく知りたいな。</p>
           <p class="about-text">気になる時ありますよね。コメントやチャットを通じて交流してみましょう。</p>
@@ -57,9 +57,8 @@
         <div class="about-image4"></div>
       </div>
       <div class="col-xs-8">
-        <h2>STEP4 リストを作ろう</h2>
-        <p></p>
-        <div class="about4">
+        <h2 class="about-step">STEP4 リストを作ろう</h2>
+        <div class="about-steps">
           <p class="about-text">次の旅行ではこの人の投稿のおすすめスポットに行ってみたいな。</p>
           <p class="about-text">地元にこんな場所があったんだ。今度の週末に行ってみるか。</p>
           <p class="about-text">
