--- a/app/views/posts/category.html.erb
+++ b/app/views/posts/category.html.erb
@@ -1,6 +1,6 @@
 <div class="container"> 
 
-  <h2 class="text-center">カテゴリー "<%= @category.name %>" の投稿一覧</h2>
+  <h2 class="text-center page-title">カテゴリー "<%= @category.name %>" の投稿一覧</h2>
 
   <div class="col-xs-4">
     <div class="box2">
