--- a/app/views/notifications/index.html.erb
+++ b/app/views/notifications/index.html.erb
@@ -1,9 +1,10 @@
 <div class="container">
   <div class="row">
-
+    <div class="col-xs-2"></div>
+    <div class="col-xs-8">
     <% notifications = @notifications.where.not(visitor_id: current_user.id) %>
 
-    <h2 class="text-center">〜通知一覧〜</h2>
+    <h2 class="text-center page-title">〜通知一覧〜</h2>
   
     <div class="col-xs-12">
       <h5>
@@ -18,6 +19,7 @@
         <p>通知はありません</p>
       <% end %>
     </div>
-  
+
+    </div>
   </div>
 </div>
