--- a/app/views/posts/hashtag.html.erb
+++ b/app/views/posts/hashtag.html.erb
@@ -3,10 +3,7 @@
 
     <h2 class="text-center">ハッシュタグ "<%= @hashtag.hashname %>" の投稿一覧</h2>
 
-    <div class="col-xs-4">
-
-        
-    </div>
+    <div class="col-xs-2"></div>
 
     <div class="col-xs-8">
       <%= render 'posts/index' , posts: @posts %>
