--- a/app/views/relationships/followed.html.erb
+++ b/app/views/relationships/followed.html.erb
@@ -1,4 +1,4 @@
-<h2 class="text-center">フォロワー一覧</h2>
+<h2 class="text-center page-title">フォロワー一覧</h2>
 
 <div class="container">
   <div class="row"> 
