--- a/app/views/favorites/destroy.js.erb
+++ b/app/views/favorites/destroy.js.erb
@@ -1,1 +1,1 @@
-$('.post_<%= @post.id %>').html("<%= j(render 'favorites/favorite', post: @post) %>");
+$('.favorite_<%= @post.id %>').html("<%= j(render 'favorites/favorite', post: @post) %>");
