--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -63,11 +63,11 @@
           <p class="about-text">地元にこんな場所があったんだ。今度の週末に行ってみるか。</p>
           <p class="about-text">
             投稿の
-            <i class="fa fa-heart" aria-hidden="true" style="color: red;"></i>
+            <i class="fas fa-bookmark" aria-hidden="true" style="color: blue;"></i>
             マークをクリックでマイページの行ってみたい一覧に保存されます。
           </p>
           <p class="about-text">
-            <i class="fa fa-heart" aria-hidden="true" style="color: red;"></i>
+            <i class="fas fa-bookmark" aria-hidden="true" style="color: blue;"></i>
             マークが多い人気投稿は、ベスト5までのランキングにも載ります。
           </p>
         </div>
