--- a/app/views/posts/_index.html.erb
+++ b/app/views/posts/_index.html.erb
@@ -64,10 +64,16 @@
       </div>
         
       <span class="favorite-count">
-        <span class="post_<%= post.id %>">
+        <span class="favorite_<%= post.id %>">
           <%= render 'favorites/favorite', post: post %>
         </span>
 	    </span>
+
+      <span class="bookmark-count">
+        <span class="bookmark_<%= post.id %>">
+          <%= render 'bookmarks/bookmark', post: post %>
+        </span>
+      </span>
            
       <span class="comment-count">
         <%= link_to post_path(post.id) do %>
