--- a/app/views/posts/prefecture.html.erb
+++ b/app/views/posts/prefecture.html.erb
@@ -119,6 +119,12 @@
                   <%= render 'favorites/favorite', post: post %>
                 </span>
 	            </span>
+
+              <span class="bookmark-count">
+                <span class="bookmark_<%= post.id %>">
+                  <%= render 'bookmarks/bookmark', post: post %>
+                </span>
+              </span>
            
               <span class="comment-count">
                 <%= link_to post_path(post.id) do %>
