--- a/app/views/relationships/followed.html.erb
+++ b/app/views/relationships/followed.html.erb
@@ -117,6 +117,12 @@
                     <span class="follower">
                       <%= user.followed.count %>フォロワー
                     </span>
+                    <span class="post-count">
+                      <%= user.posts.count %> 投稿
+                    </span>
+                    <span class="post-favorite">
+                      <%= user.favorites.count %> いいね
+                    </span>
                   </div>
 
                 </div>
