--- a/app/views/users/bookmark.html.erb
+++ b/app/views/users/bookmark.html.erb
@@ -1,13 +1,13 @@
-<!--いいね一覧-->
+<!--行ってみたい一覧-->
 <div class="container">
   <div class="row">
-    <div class="col-xs-3"></div>
-    <div class="col-xs-6">
-    
+    <div class="col-xs-2"></div>
+    <div class="col-xs-8">
+
       <h2 class="text-center page-title">〜行ってみたい一覧〜</h2>
 
-      <% @favorites.each do |favorite| %>
-        <% post = Post.find_by(id: favorite.post_id) %>
+      <% @bookmarks.each do |bookmark| %>
+        <% post = Post.find_by(id: bookmark.post_id) %>
   
         <div class="box1">
           <div class="post">
@@ -78,6 +78,12 @@
                 <%= render 'favorites/favorite', post: post %>
               </span>
 	          </span>
+
+            <span class="bookmark-count">
+              <span class="bookmark_<%= post.id %>">
+                <%= render 'bookmarks/bookmark', post: post %>
+              </span>
+            </span>
            
             <span class="comment-count">
               <%= link_to post_path(post.id) do %>
