--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -40,9 +40,16 @@
                     <%= @user.followed.count %> フォロワー
                   <% end %>
                 </span>
-                <span class="user_favorites">
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <span class="user-favorites">
+                  <%= link_to "いいね一覧", favorite_path(@user) %>
+                </span>
+                <span class="user-bookmarks">
                   <% if @user.id == current_user.id %>
-                    <%= link_to "行ってみたい一覧", favorites_path(@user) %>
+                    <%= link_to "行ってみたい一覧", bookmark_path(@user) %>
                   <% end %>
                 </span>
               </td>
@@ -50,7 +57,7 @@
           </table>
 
           <% if @user == current_user %>
-            <%= link_to "編集", edit_user_path(@user) %>
+            <%= link_to "編集", edit_user_path(@user), class: "btn btn-primary" %>
           <% else %>
             <% unless @user == current_user %>
               <% if current_user.following(@user) %>
@@ -154,6 +161,12 @@
                 <%= render 'favorites/favorite', post: post %>
               </span>
 	          </span>
+
+            <span class="bookmark-count">
+              <span class="bookmark_<%= post.id %>">
+                <%= render 'bookmarks/bookmark', post: post %>
+              </span>
+            </span>
 
             <span class="comment-count">
               <%= link_to post_path(post.id) do %>
